--- a/popup.css
+++ b/popup.css
@@ -1,9 +1,35 @@
 body {
     width: 200px;
-    height: 200px;
+    height: 210px;
   }
   
   h1 {
     color: #333;
   }
   
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+    max-width: 200px;
+    text-align: center;
+}
+
+.grid-item {
+    background-color: #34c2db;
+    color: #ffffff;
+    padding: 5px;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 13px;
+    transition: background-color 0.3s ease;
+}
+
+.grid-item.clicked {
+  background-color: #2980b9; /* Change to a different color for the last clicked button */
+}
+
+.grid-item:hover {
+  background-color: #2980b9;
+}
